[package]
name = "teste"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "src/decoders/okx-dex-decoder",  # Isso já inclui decoders/okx-dex-decoder
]
resolver = "2"

[lib]
name = "teste"
path = "src/lib.rs"

[workspace.package]
rust-version = "1.82"
version = "0.5.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/sevenlabs-hq/carbon"

[dependencies]
solana-account-decoder = "2.2.1"
solana-client = "2.2.1"
solana-sdk = "2.2.1"
solana-transaction-status = "2.2.1"
spl-memo = "6.0.0"
spl-token = "8.0.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
carbon-core = "0.9.1"
carbon-proc-macros = "0.9.1" 
carbon-macros = "0.9.1"
carbon-okx-dex-decoder = { path = "src/decoders/okx-dex-decoder", version = "0.5.1" }
carbon-jupiter-swap-decoder = "0.9.1" 
carbon-raydium-amm-v4-decoder = "0.9.1" 
carbon-pump-swap-decoder = "0.9.1"
carbon-raydium-launchpad-decoder = "0.9.1"
carbon-pumpfun-decoder = "0.9.1"
